--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ideas project</title>
+    <title>Let me do it!</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles.css.map">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav>
         <div class="nav-wrapper">
             <div class="nav__left-side">
                 <a class="logo">
-                    <img src="img/logo2.png">
+                    <img src="img/logo.png">
                     <span class="nav__profile-name">Let me do it!</span>
                 </a>
             </div>
