--- a/index.html
+++ b/index.html
@@ -1,83 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Let me do it!</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/styles.css.map">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-    <nav>
-        <div class="nav-wrapper">
-            <div class="nav__left-side">
-                <a class="logo">
-                    <img src="img/logo.png">
-                    <span class="nav__profile-name">Let me do it!</span>
-                </a>
+
+<nav>
+    <div class="nav-wrapper">
+        <div class="nav__left-side">
+            <a id="logo" href="#" class="logo">
+                <img src="img/logo.png">
+                <span class="nav__profile-name">Let me do it!</span>
+            </a>
+        </div>
+        <div id="profile-bar" class="nav__right-side">
+            <a href="#" class="nav__img-wrapper">
+                <img src="img/profile.jpg">
+                <span class="nav__profile-name">Ilya</span>
+                <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu invisible-element">
+                <li><a href="assets/idea.html">New idea</a></li>
+                <li><a href="assets/profile.html">My profile</a></li>
+                <li><a href="assets/settings.html">Settings</a></li>
+                <li><a href="#">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="page-wrapper">
+    <section class="ideas-section">
+        <ul class="ideas-filter">
+            <li class="ideas-filter__current">Trending</li>
+            <li>New</li>
+            <li>Realized</li>
+        </ul>
+        <div class="idea">
+            <div class="idea__header">
+                <div class="idea__header__name">Ideaasasfa asdsdad asadsa asd asas dasd asdadas  asda sd name</div>
+                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
+                        class="rating rating__plus"> + </span></div>
             </div>
-            <div class="nav__right-side">
-                <a class="nav__img-wrapper">
-                    <img src="img/profile.jpg">
-                    <span class="nav__profile-name">Profile</span>
-                    <span class="caret"></span>
-                </a>
+            <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
+            <div class="idea__footer">
+                <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments">Comments (0)</a>
             </div>
         </div>
-    </nav>
-    <div class="page-wrapper">
-        <section class="ideas-section">
-            <ul class="ideas-filter">
-                <li class="ideas-filter__current">Trending</li>
-                <li>New</li>
-                <li>Realized</li>
-            </ul>
-            <div class="idea">
-                <div class="idea__header">
-                    <p class="idea__header__name">Idea name</p>
-                    <p class="idea__header__rating"><span class="rating rating__plus"> + </span><span> 0 </span><span class="rating rating__minus"> -</span></p>
-                </div>
-                <p class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</p>
-                <div class="idea__footer">
-                    <a class="idea__footer__full">Read more..</a>
-                    <a class="idea__footer__comments">Comments (0)</a>
-                </div>
+        <div class="idea">
+            <div class="idea__header">
+                <div class="idea__header__name">Ideaasasfa asdsdad asadsa asd asas dasd asdadas  asda sd name</div>
+                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
+                        class="rating rating__plus"> + </span></div>
             </div>
-            <div class="idea">
-                <div class="idea__header">
-                    <p class="idea__header__name">Idea name</p>
-                    <p class="idea__header__rating"><span class="rating rating__plus"> + </span><span> 0 </span><span class="rating rating__minus"> -</span></p>
-                </div>
-                <p class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</p>
-                <div class="idea__footer">
-                    <a class="idea__footer__full">Read more..</a>
-                    <a class="idea__footer__comments">Comments (0)</a>
-                </div>
+            <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
+            <div class="idea__footer">
+                <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments">Comments (0)</a>
             </div>
-            <div class="idea">
-                <div class="idea__header">
-                    <p class="idea__header__name">Idea name</p>
-                    <p class="idea__header__rating"><span class="rating rating__plus"> + </span><span> 0 </span><span class="rating rating__minus"> -</span></p>
-                </div>
-                <p class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</p>
-                <div class="idea__footer">
-                    <a class="idea__footer__full">Read more..</a>
-                    <a class="idea__footer__comments">Comments (0)</a>
-                </div>
+        </div>
+        <div class="idea">
+            <div class="idea__header">
+                <div class="idea__header__name">Ideaasasfa asdsdad asadsa asd asas dasd asdadas  asda sd name</div>
+                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
+                        class="rating rating__plus"> + </span></div>
             </div>
-        </section>
-        <hr class="footer-hr">
-        <footer class="page-footer">
-            <ul class="page-footer__links">
-                <li>
-                    © 2017, Let me do it!
-                </li>
-                <li>
-                    <a href="https://gitlab.com/vertvvv/js-practice-ilya-trokhin">Gitlab link</a>
-                </li>
-            </ul>
-        </footer>
-    </div>
+            <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
+            <div class="idea__footer">
+                <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments">Comments (0)</a>
+            </div>
+        </div>
+    </section>
+
+    <hr class="footer-hr">
+
+    <footer class="page-footer">
+        <ul class="page-footer__links">
+            <li>
+                © 2017, Let me do it!
+            </li>
+            <li>
+                <a href="https://gitlab.com/vertvvv/js-practice-ilya-trokhin">Gitlab link</a>
+            </li>
+        </ul>
+    </footer>
+</div>
+
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+
 </body>
+
 </html>
