Idea page modified, main page changes
Idea page changed, comments added, header shadow added, comments icon on
main page added

--- a/assets/idea.html
+++ b/assets/idea.html
@@ -15,7 +15,7 @@
 <nav>
     <div class="nav-wrapper">
         <div class="nav__left-side">
-            <a id="logo" href="../index.html" class="logo">
+            <a href="../index.html" class="logo">
                 <img src="../img/logo.png">
                 <span class="nav__profile-name">Let me do it!</span>
             </a>
@@ -44,19 +44,100 @@
                 <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
                         class="rating rating__plus"> + </span></div>
             </div>
-            <div class="idea__text">You have studied many types of management systems , one of the most important among those is Human Resource Management. This system can be used in any organization or institute. The unique thing about this project is its usefulness in real market. You can develop this project for sale purposes also.
-                <br>
-                <br>
-            Most of these systems are offline software, if you can develop this system online with rich features, you will have good chance of success in market.</div>
-            <div class="idea__footer ">
+            <div class="idea__text">
+                <section class="idea__text__main">
+                    <h1>Main idea</h1>
+                    <p>You have studied many types of management systems , one of the most important among those is Human Resource Management. This system can be used in any organization or institute. The unique thing about this project is its usefulness in real market. You can develop this project for sale purposes also.
+                    <br>
+                    <br>
+                        Most of these systems are offline software, if you can develop this system online with rich features, you will have good chance of success in market.</p>
+                </section>
+                <section class="idea__text__functions">
+                    <h1>Functionality</h1>
+                    <ul>
+                        <li>Can do this</li>
+                        <li>Can do and this</li>
+                        <li>Can do this</li>
+                        <li>Can do and this</li>
+                        <li>Can do this</li>
+                        <li>Can do and this</li>
+                        <li>Can do this</li>
+                        <li>Can do and this</li>
+                    </ul>
+                </section>
+                <section class="idea__text__mockups">
+                    <h1>Mockups</h1>
+                    <div class="img-grid">
+                        <div class="img-grid__wrapper">
+                            <img class="mockup" src="../img/mockup1.png">
+                        </div>
+                        <div class="img-grid__wrapper">
+                            <img class="mockup" src="../img/mockup2.png">
+                        </div>
+                        <div class="img-grid__wrapper">
+                            <img class="mockup" src="../img/mockup3.png">
+                        </div>
+                    </div>
+                </section>
+                <section class="idea__text__other">
+                    <h2>Other wishes</h2>
+                    <h3>Platforms</h3>
+                    <p>Windows, MacOS, Linux, Android, idk</p>
+                    <h3>Special thanks</h3>
+                    <p>I can buy thousand delicious cookies for you!</p>
+                </section>
+                <section class="idea__text__tags">
+                    <div class="tag">Tag1</div>
+                    <div class="tag">Tag2</div>
+                    <div class="tag">Tag3</div>
+                </section>
+                <div id="comments" class="idea__footer">
                 <hr>
                 <div class="comments">
-                    <div class="row">
-                        <div class="avatar">
-                            <div class="avatar-wrapper"></div>
-                        </div>
-                        <div class="input-place">
+                    <div class="row answer-block">
+                        <div class="flex-item input-place">
                             <textarea id="new-comment" placeholder="Write your comment here.."></textarea>
+                            <div class="input-place__button">Send</div>
+                        </div>
+                    </div>
+                    <div class="row comments-block">
+                        <div class="flex-item avatar">
+                            <div class="avatar__wrapper"></div>
+                            <div class="avatar__username"><a href="profile.html">username</a></div>
+                        </div>
+                        <div class="flex-item comment">
+                            <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11</div>
+                            <div class="comment__date">31 Aug 2018, 18:02</div>
+                        </div>
+                    </div>
+                    <div class="row comments-block">
+                        <div class="flex-item avatar">
+                            <div class="avatar__wrapper"></div>
+                            <div class="avatar__username"><a href="profile.html">username</a></div>
+                        </div>
+                        <div class="flex-item comment">
+                            <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea tx i wanna do it!11</div>
+                            <div class="comment__date">31 Aug 2018, 18:02</div>
+                        </div>
+                    </div>
+                    <div class="row comments-block">
+                        <div class="flex-item avatar">
+                            <div class="avatar__wrapper"></div>
+                            <div class="avatar__username"><a href="profile.html">username</a></div>
+                        </div>
+                        <div class="flex-item comment">
+                            <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
+                            <div class="comment__date">31 Aug 2018, 18:02</div>
+                        </div>
+                    </div>
+                    <div class="row comments-block">
+                        <div class="flex-item avatar">
+                            <div class="avatar__wrapper"></div>
+                            <div class="avatar__username"><a href="profile.html">username</a></div>
+                        </div>
+                        <div class="flex-item comment">
+                            <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
+                            <div class="comment__date">31 Aug 2018, 18:02</div>
                         </div>
                     </div>
                 </div>
