--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
             <div class="idea__footer">
                 <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
-                <a href="assets/idea.html#comments" class="idea__footer__comments">Comments (0)</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
             </div>
         </div>
         <div class="idea">
@@ -64,7 +64,7 @@
             <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
             <div class="idea__footer">
                 <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
-                <a href="assets/idea.html#comments" class="idea__footer__comments">Comments (0)</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
             </div>
         </div>
         <div class="idea">
@@ -76,7 +76,7 @@
             <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
             <div class="idea__footer">
                 <a href="assets/idea.html" class="idea__footer__full">Read more..</a>
-                <a href="assets/idea.html#comments" class="idea__footer__comments">Comments (0)</a>
+                <a href="assets/idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
             </div>
         </div>
     </section>
