Profile and settings page added
2 pages added, minor fixes on other pages

--- a/assets/idea.html
+++ b/assets/idea.html
@@ -21,16 +21,16 @@
             </a>
         </div>
         <div id="profile-bar" class="nav__right-side">
-            <a href="#" class="nav__img-wrapper">
+            <a class="nav__img-wrapper">
                 <img src="../img/profile.jpg">
                 <span class="nav__profile-name">Ilya</span>
                 <span class="caret"></span>
             </a>
             <ul class="dropdown-menu invisible-element">
-                <li><a href="../assets/idea.html">New idea</a></li>
-                <li><a href="../assets/profile.html">My profile</a></li>
-                <li><a href="../assets/settings.html">Settings</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="new_idea.html">New idea</a></li>
+                <li><a href="profile.html">My profile</a></li>
+                <li><a href="settings.html">Settings</a></li>
+                <li><a href="../index.html">Logout</a></li>
             </ul>
         </div>
     </div>
@@ -47,22 +47,25 @@
             <div class="idea__text">
                 <section class="idea__text__main">
                     <h1>Main idea</h1>
-                    <p>You have studied many types of management systems , one of the most important among those is Human Resource Management. This system can be used in any organization or institute. The unique thing about this project is its usefulness in real market. You can develop this project for sale purposes also.
-                    <br>
-                    <br>
-                        Most of these systems are offline software, if you can develop this system online with rich features, you will have good chance of success in market.</p>
+                    <p>You have studied many types of management systems , one of the most important among those is
+                        Human Resource Management. This system can be used in any organization or institute. The unique
+                        thing about this project is its usefulness in real market. You can develop this project for sale
+                        purposes also.
+                        <br>
+                        <br>
+                        Most of these systems are offline software, if you can develop this system online with rich
+                        features, you will have good chance of success in market.</p>
                 </section>
                 <section class="idea__text__functions">
                     <h1>Functionality</h1>
                     <ul>
-                        <li>Can do this</li>
-                        <li>Can do and this</li>
-                        <li>Can do this</li>
-                        <li>Can do and this</li>
-                        <li>Can do this</li>
-                        <li>Can do and this</li>
-                        <li>Can do this</li>
-                        <li>Can do and this</li>
+                        <li>Must have big table with different columns, charts and users (i have no idea what is it, but
+                            you can see it on first screenshot)
+                        </li>
+                        <li>Calendar must be here too. User can select date or dates interval</li>
+                        <li>On third page user can see many attractions, probably he wanna buy tickets on this
+                            attractions
+                        </li>
                     </ul>
                 </section>
                 <section class="idea__text__mockups">
@@ -92,52 +95,53 @@
                     <div class="tag">Tag3</div>
                 </section>
                 <div id="comments" class="idea__footer">
-                <hr>
-                <div class="comments">
-                    <div class="row answer-block">
-                        <div class="flex-item input-place">
-                            <textarea id="new-comment" placeholder="Write your comment here.."></textarea>
-                            <div class="input-place__button">Send</div>
+                    <hr>
+                    <div class="comments">
+                        <div class="row answer-block">
+                            <div class="flex-item input-place">
+                                <textarea id="new-comment" placeholder="Write your comment here.."></textarea>
+                                <div class="input-place__button">Send</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row comments-block">
-                        <div class="flex-item avatar">
-                            <div class="avatar__wrapper"></div>
-                            <div class="avatar__username"><a href="profile.html">username</a></div>
+                        <div class="row comments-block">
+                            <div class="flex-item avatar">
+                                <div class="avatar__wrapper"></div>
+                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                            </div>
+                            <div class="flex-item comment">
+                                <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11</div>
+                                <div class="comment__date">31 Aug 2018, 18:02</div>
+                            </div>
                         </div>
-                        <div class="flex-item comment">
-                            <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11</div>
-                            <div class="comment__date">31 Aug 2018, 18:02</div>
+                        <div class="row comments-block">
+                            <div class="flex-item avatar">
+                                <div class="avatar__wrapper"></div>
+                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                            </div>
+                            <div class="flex-item comment">
+                                <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea tx i wanna do it!11</div>
+                                <div class="comment__date">31 Aug 2018, 18:02</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row comments-block">
-                        <div class="flex-item avatar">
-                            <div class="avatar__wrapper"></div>
-                            <div class="avatar__username"><a href="profile.html">username</a></div>
+                        <div class="row comments-block">
+                            <div class="flex-item avatar">
+                                <div class="avatar__wrapper"></div>
+                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                            </div>
+                            <div class="flex-item comment">
+                                <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
+                                <div class="comment__date">31 Aug 2018, 18:02</div>
+                            </div>
                         </div>
-                        <div class="flex-item comment">
-                            <div class="comment__text">Hmmm nice idea thx i wanna do it!11 Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea thx i wanna do it!11Hmmm nice idea tx i wanna do it!11</div>
-                            <div class="comment__date">31 Aug 2018, 18:02</div>
-                        </div>
-                    </div>
-                    <div class="row comments-block">
-                        <div class="flex-item avatar">
-                            <div class="avatar__wrapper"></div>
-                            <div class="avatar__username"><a href="profile.html">username</a></div>
-                        </div>
-                        <div class="flex-item comment">
-                            <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
-                            <div class="comment__date">31 Aug 2018, 18:02</div>
-                        </div>
-                    </div>
-                    <div class="row comments-block">
-                        <div class="flex-item avatar">
-                            <div class="avatar__wrapper"></div>
-                            <div class="avatar__username"><a href="profile.html">username</a></div>
-                        </div>
-                        <div class="flex-item comment">
-                            <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
-                            <div class="comment__date">31 Aug 2018, 18:02</div>
+                        <div class="row comments-block">
+                            <div class="flex-item avatar">
+                                <div class="avatar__wrapper"></div>
+                                <div class="avatar__username"><a href="profile.html">username</a></div>
+                            </div>
+                            <div class="flex-item comment">
+                                <div class="comment__text">Hmmm nice idea thx i wa it!11</div>
+                                <div class="comment__date">31 Aug 2018, 18:02</div>
+                            </div>
                         </div>
                     </div>
                 </div>
