--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             </a>
         </div>
         <div id="profile-bar" class="nav__right-side">
-            <a href="#" class="nav__img-wrapper">
+            <a class="nav__img-wrapper">
                 <img src="img/profile.jpg">
                 <span class="nav__profile-name">Ilya</span>
                 <span class="caret"></span>
             </a>
             <ul class="dropdown-menu invisible-element">
-                <li><a href="assets/idea.html">New idea</a></li>
+                <li><a href="assets/new_idea.html">New idea</a></li>
                 <li><a href="assets/profile.html">My profile</a></li>
                 <li><a href="assets/settings.html">Settings</a></li>
                 <li><a href="#">Logout</a></li>
