--- a/assets/profile.html
+++ b/assets/profile.html
@@ -1,10 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Let me do it!</title>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css.map">
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 </head>
+
 <body>
 
+<nav>
+    <div class="nav-wrapper">
+        <div class="nav__left-side">
+            <a href="../index.html" class="logo">
+                <img src="../img/logo.png">
+                <span class="nav__profile-name">Let me do it!</span>
+            </a>
+        </div>
+        <div id="profile-bar" class="nav__right-side">
+            <a class="nav__img-wrapper">
+                <img src="../img/profile.jpg">
+                <span class="nav__profile-name">Ilya</span>
+                <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu invisible-element">
+                <li><a href="new_idea.html">New idea</a></li>
+                <li><a href="#">My profile</a></li>
+                <li><a href="settings.html">Settings</a></li>
+                <li><a href="../index.html">Logout</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<div class="page-wrapper">
+    <section class="user-section">
+        <div class="user-bio">
+            <div class="user-bio__main">
+                <div class="user-bio__main__avatar">
+                </div>
+                <div class="user-bio__main__username">
+                    Username username
+                </div>
+            </div>
+            <div class="user-bio__info">
+                <div class="user-bio__info__desc">
+                    <span><i>User bio:</i> I am user from Userland, my hobby is posting ideas, hope someone can realize something from it!</span>
+                </div>
+                <div class="user-bio__info__stats">
+                    <div class="stats-button">
+                        <span class="stats-button__name">Ideas</span>
+                        <span class="stats-button__value">1</span>
+                    </div>
+                    <div class="stats-button">
+                        <span class="stats-button__name">Comments</span>
+                        <span class="stats-button__value">5</span>
+                    </div>
+                    <div class="stats-button">
+                        <span class="stats-button__name">Rating</span>
+                        <span class="stats-button__value">25</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="ideas-user-section">
+        <div class="idea">
+            <div class="idea__header">
+                <div class="idea__header__name">Ideaasasfa asdsdad asadsa asd asas dasd asdadas  asda sd name</div>
+                <div class="idea__header__rating"><span class="rating rating__minus"> -</span><span> 0 </span><span
+                        class="rating rating__plus"> + </span></div>
+            </div>
+            <div class="idea__text">Idea text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text text idea text</div>
+            <div class="idea__footer">
+                <a href="idea.html" class="idea__footer__full">Read more..</a>
+                <a href="idea.html#comments" class="idea__footer__comments"><span class="comment-icon">111</span> 0</a>
+            </div>
+        </div>
+    </section>
+
+    <hr class="footer-hr">
+
+    <footer class="page-footer">
+        <ul class="page-footer__links">
+            <li>
+                © 2017, Let me do it!
+            </li>
+            <li>
+                <a href="https://gitlab.com/vertvvv/js-practice-ilya-trokhin">Gitlab link</a>
+            </li>
+        </ul>
+    </footer>
+</div>
+
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/index.js"></script>
+
 </body>
+
 </html>
